2009-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12597: htmlArea RTE: cursor position is not restored by undo/redo operations in Opera
	* Fixed bug #12421: htmlArea RTE: Paste is erratic in Opera 10 when server-based cleaning is enabled

2009-11-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12324: Page tree will not be shown in the TYPO3 backend
	* Follow-up to bugfix #12324: Renamed sanitizeBackEndUrl() to sanitizeLocalUrl() in t3lib_div

2009-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12566: htmlArea RTE: Selecting element from status bar does not work in Safari
	* Fixed bug #12568: htmlArea RTE: Text pasted by Safari is wrapped in span or font tags

2009-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12115: htmlArea RTE "Create link" button doesn't become clickable when using keyboard to select text in Safari/Chrome

2009-11-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #11847: htmlArea RTE displays empty editing area in Opera 10
	* Fixed bug #12534: htmlArea RTE: list creation looses text in Safari

2009-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12481: AllowClipboard Helper Firefox extension does not work with FF 3.5

2009-11-03  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #11876 and #12342: stripSlashesOnArray creates references where you want copies (in some PHP versions). Affects usage of _GP (e.g. in the Install Tool and some frontend extensions).

2009-11-03  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed bug #9513: t3editor bad line numbering

2009-11-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12331: htmlArea RTE plugins may not be loaded for multiple RTEs

2009-10-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #12371: Warning issued on first load of install tool with open_basedir set

2009-10-28  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9795: Default values have no labels in the multiple select control inside the flexform
